# ground

./: README.md  pyproject.toml
src/tickshock/ground/: __init__.py  _common.py
src/tickshock/ground/exceptions/: __init__.py  _general.py
src/tickshock/ground/types/: __init__.py  _candle.py  _session.py
tst/unit/: test_common.py
tst/unit/types/: test_candle.py  test_sessions.py
