[project]
name = "ground"
version = "0.1.0"
description = "Core library containing shared type definitions and project-wide constants"
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [
    { include = "tickshock", from = "src" }
]
exclude = ["gangbox/**"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = ">=2.12.5,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
mypy = ">=1.11.0,<2.0.0"
pylint = ">=4.0.4,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
